# invite

./: .gitignore  Cargo.toml  Dockerfile  diesel.toml  fly.toml
migrations/2025-05-15-224222_create_users_and_presents/: down.sql  up.sql
migrations/2025-05-29-105051_add_status_to_presents/: down.sql  up.sql
migrations/2025-06-24-fix-user-presents-constraint/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: invitation.html  language_selector.html  present_list.html  presents.html  welcome.html
