[package]
name = "invite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
minijinja = { version = "1", features = ["loader"] }
env_logger = "0.10"
log = "0.4"
diesel_migrations = "2.2.0"